examples/test/testpolicy13460.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13460
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key23: value23
      key39: value40
      key20: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value0
      podSelector:
        matchLabels:
          key47: value12
